{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 507,
  "lineage": "c3596aef-43b0-17b2-6886-9d4c9ca602e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three-tier-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05280e18d7e31a125",
            "arn": "arn:aws:ec2:eu-west-1:961341527089:elastic-ip/eipalloc-05280e18d7e31a125",
            "association_id": "eipassoc-016b946a66abda915",
            "domain": "vpc",
            "id": "eipalloc-05280e18d7e31a125",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0a01fd483d40cf209",
            "private_dns": "ip-10-1-1-14.eu-west-1.compute.internal",
            "private_ip": "10.1.1.14",
            "public_dns": "ec2-34-248-230-71.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.230.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "three-tier-nat-eip"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-nat-eip",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d64bb532e0502c46",
            "arn": "arn:aws:ec2:eu-west-1:961341527089:instance/i-093145ef20f214e14",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093145ef20f214e14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c403aa3d8100c95",
            "private_dns": "ip-10-1-1-7.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.7",
            "public_ip": "18.201.69.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Production",
                  "Owner": "DevOps Team",
                  "Project": "Three-Tier-App"
                },
                "tags_all": {
                  "Environment": "Production",
                  "Owner": "DevOps Team",
                  "Project": "Three-Tier-App"
                },
                "throughput": 125,
                "volume_id": "vol-087d11a4715ee47f2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d96ea91dcce3145",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Bastion Host",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dfc6200bc5743f76"
            ]
          },
          "dependencies": [
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:internet-gateway/igw-0c9e0ddc5b406a272",
            "id": "igw-0c9e0ddc5b406a272",
            "owner_id": "961341527089",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-igw",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-igw",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three-tier-app-aws-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-app-lb/60b4e65549cf78c8",
            "arn_suffix": "app/three-tier-app-lb/60b4e65549cf78c8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-three-tier-app-lb-156936551.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-app-lb/60b4e65549cf78c8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0866fe07fd7aedf24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ac1ba9b6ad33425"
              },
              {
                "subnet_id": "subnet-0cb757d8ba0524061"
              }
            ],
            "subnets": [
              "subnet-04ac1ba9b6ad33425",
              "subnet-0cb757d8ba0524061"
            ],
            "tags": {
              "Environement": "three-tier-app-lb",
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environement": "three-tier-app-lb",
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_security_group.three-tier-ec2-asg-sg-app",
            "aws_subnet.three-tier-pvt-sub-3",
            "aws_subnet.three-tier-pvt-sub-4",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three-tier-web-aws-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-web-lb/c5b30b7398073c1b",
            "arn_suffix": "app/three-tier-web-lb/c5b30b7398073c1b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-web-lb-579284963.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-web-lb/c5b30b7398073c1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01669e277725ffc5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08d96ea91dcce3145"
              },
              {
                "subnet_id": "subnet-0c391a95923590d4c"
              }
            ],
            "subnets": [
              "subnet-08d96ea91dcce3145",
              "subnet-0c391a95923590d4c"
            ],
            "tags": {
              "Environement": "three-tier-web-lb",
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environement": "three-tier-web-lb",
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three-tier-app-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:listener/app/three-tier-app-lb/60b4e65549cf78c8/229ee10f2bd24b01",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-app-lb-tg/4345d1f7a1fe7677",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:listener/app/three-tier-app-lb/60b4e65549cf78c8/229ee10f2bd24b01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-app-lb/60b4e65549cf78c8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three-tier-app-aws-lb",
            "aws_lb_target_group.three-tier-app-lb-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_security_group.three-tier-ec2-asg-sg-app",
            "aws_subnet.three-tier-pvt-sub-3",
            "aws_subnet.three-tier-pvt-sub-4",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three-tier-web-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:listener/app/three-tier-web-lb/c5b30b7398073c1b/f187b6f5d35a666f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-web-lb-tg/bbdbcef829c4bad5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:listener/app/three-tier-web-lb/c5b30b7398073c1b/f187b6f5d35a666f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-web-lb/c5b30b7398073c1b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three-tier-web-aws-lb",
            "aws_lb_target_group.three-tier-web-lb-tg",
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three-tier-app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-app-lb-tg/4345d1f7a1fe7677",
            "arn_suffix": "targetgroup/three-tier-app-lb-tg/4345d1f7a1fe7677",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-app-lb-tg/4345d1f7a1fe7677",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-app-lb/60b4e65549cf78c8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-app-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three-tier-web-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-web-lb-tg/bbdbcef829c4bad5",
            "arn_suffix": "targetgroup/three-tier-web-lb-tg/bbdbcef829c4bad5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:961341527089:targetgroup/three-tier-web-lb-tg/bbdbcef829c4bad5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:961341527089:loadbalancer/app/three-tier-web-lb/c5b30b7398073c1b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three-tier-natgw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05280e18d7e31a125",
            "association_id": "eipassoc-016b946a66abda915",
            "connectivity_type": "public",
            "id": "nat-05f0c1659e6427fbf",
            "network_interface_id": "eni-0a01fd483d40cf209",
            "private_ip": "10.1.1.14",
            "public_ip": "34.248.230.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d96ea91dcce3145",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-natgw-01",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-natgw-01",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            }
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:route-table/rtb-0b6531d828762dda0",
            "id": "rtb-0b6531d828762dda0",
            "owner_id": "961341527089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f0c1659e6427fbf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-app-rt",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-app-rt",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:route-table/rtb-00544527957de9865",
            "id": "rtb-00544527957de9865",
            "owner_id": "961341527089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9e0ddc5b406a272",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-web-rt",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-web-rt",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bd5246d85652ee1",
            "route_table_id": "rtb-00544527957de9865",
            "subnet_id": "subnet-08d96ea91dcce3145"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a7d6bb74da3c9b1",
            "route_table_id": "rtb-00544527957de9865",
            "subnet_id": "subnet-0c391a95923590d4c"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041bce8077e1c66e8",
            "route_table_id": "rtb-0b6531d828762dda0",
            "subnet_id": "subnet-0a31e81a2a8463d6a"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191b8c504ad9e6a5",
            "route_table_id": "rtb-0b6531d828762dda0",
            "subnet_id": "subnet-057457c879f78d17c"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0685780bef3818b6a",
            "route_table_id": "rtb-0b6531d828762dda0",
            "subnet_id": "subnet-04ac1ba9b6ad33425"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-3",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024d1894fb5ac01ec",
            "route_table_id": "rtb-0b6531d828762dda0",
            "subnet_id": "subnet-0cb757d8ba0524061"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-4",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:security-group/sg-0dfc6200bc5743f76",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfc6200bc5743f76",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.24.219.214/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "961341527089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion SG"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Bastion SG",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:security-group/sg-01669e277725ffc5a",
            "description": "SG for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01669e277725ffc5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-alb-sg-1",
            "name_prefix": "",
            "owner_id": "961341527089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-alb-sg-1",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:security-group/sg-0f36ad39bc0e2698a",
            "description": "Security group for RDS database instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f36ad39bc0e2698a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0866fe07fd7aedf24"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three-tier-db-sg",
            "name_prefix": "",
            "owner_id": "961341527089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-db-sg",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_security_group.three-tier-ec2-asg-sg-app",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:security-group/sg-01bef3147830504ce",
            "description": "Security group for EC2 Auto Scaling Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bef3147830504ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc6200bc5743f76"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three-tier-ec2-asg-sg-web-unique",
            "name_prefix": "",
            "owner_id": "961341527089",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:security-group/sg-0866fe07fd7aedf24",
            "description": "SG for EC2 instances in the App Auto Scaling Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0866fe07fd7aedf24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-01bef3147830504ce"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc6200bc5743f76"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three-tier-ec2-asg-sg-app",
            "name_prefix": "",
            "owner_id": "961341527089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-db-sg",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-08d96ea91dcce3145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d96ea91dcce3145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pub-sub-1",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pub-sub-1",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-0c391a95923590d4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c391a95923590d4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pub-sub-2",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pub-sub-2",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-0a31e81a2a8463d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a31e81a2a8463d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-1",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-1",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-057457c879f78d17c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057457c879f78d17c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-2",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-2",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-04ac1ba9b6ad33425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.2.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac1ba9b6ad33425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-3",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-3",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:subnet/subnet-0cb757d8ba0524061",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb757d8ba0524061",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341527089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-4",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-pvt-sub-4",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "vpc_id": "vpc-04e555e0eba15ae72"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961341527089:vpc/vpc-04e555e0eba15ae72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c1a279096673dd88",
            "default_route_table_id": "rtb-0fb2d2d0ca3e11d9f",
            "default_security_group_id": "sg-02bc2aea6728964b2",
            "dhcp_options_id": "dopt-000ade4bd9cadfd47",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e555e0eba15ae72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb2d2d0ca3e11d9f",
            "owner_id": "961341527089",
            "tags": {
              "Environment": "Production",
              "Name": "three-tier-vpc",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "three-tier-vpc",
              "Owner": "DevOps Team",
              "Project": "Three-Tier-App"
            }
          }
        }
      ]
    }
  ]
}